<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leesnriud.layoutlist.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/bt_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linearlayout"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/bt_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relativelayout"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/bt_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tablelayout"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/bt_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/framelayout"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/bt_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gridlayout"
            android:layout_margin="5dp"/>
        <Button
            android:id="@+id/bt_absolute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/absolutelayout"
            android:layout_margin="5dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
